<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_OEE_ProductionSummary" Id="{98b484ae-bbfb-416f-a7a9-8f5976d6344d}">
    <Declaration><![CDATA[// X64 size: 148 bytes
TYPE ST_OEE_ProductionSummary :
	STRUCT
		wsEquipment     : WSTRING(20) ;
		wsSummary_type  : WSTRING(30) ;
		diSummary_value : DINT ;
		sFaam_id       : STRING(20) ;
		sSo_number     : STRING(12) ;
		diSo_id         : DINT ;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>